--- a/pinpad/hub-core-pinpad-complete-example/app/src/main/AndroidManifest.xml
+++ b/pinpad/hub-core-pinpad-complete-example/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".ChooseDeviceActivity"
+            android:name=".SettingsActivity"
             android:exported="false" />
 
         <activity
