feat-complete-example: add payment with Scope

--- a/pinpad/hub-core-pinpad-complete-example/app/src/main/AndroidManifest.xml
+++ b/pinpad/hub-core-pinpad-complete-example/app/src/main/AndroidManifest.xml
@@ -30,9 +30,12 @@
             android:exported="false" />
 
         <activity
-            android:name=".SitefSettingsActivity"
+            android:name=".ScopeSettingsActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".SitefSettingsActivity"
+            android:exported="false" />
 
         <activity android:name=".PaymentActivity" />
 
