--- a/pdv-pinpad/hub-core-pinpad-pdv-example/app/src/main/AndroidManifest.xml
+++ b/pdv-pinpad/hub-core-pinpad-pdv-example/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Lib Sitef Permissions -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.ACTION_MANAGE_OVERLAY_PERMISSION" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,6 +42,12 @@
 
 
         <activity android:name=".PaymentActivity" />
+
+
+        <service
+            android:name=".WebSocketService"
+            android:foregroundServiceType="dataSync" />
+
 
         <activity
             android:name=".MainActivity"
