--- a/pdv-pinpad/hub-core-pinpad-pdv-example/gradle/libs.versions.toml
+++ b/pdv-pinpad/hub-core-pinpad-pdv-example/gradle/libs.versions.toml
@@ -19,11 +19,16 @@ rxandroid = "3.0.0"
 signalr = "8.0.11"
 preference = "1.2.1"
 
-hubinterface = "1.0.0"
+hubinterface = "2.0.0"
 hubcore = "1.0.0-debug"
-##Test only
 
+krossbowStompCore = "7.0.0"
 [libraries]
+
+
+krossbow-stomp-core = { module = "org.hildan.krossbow:krossbow-stomp-core", version.ref = "krossbowStompCore" }
+krossbow-stomp-kxserialization-json = { module = "org.hildan.krossbow:krossbow-stomp-kxserialization-json", version.ref = "krossbowStompCore" }
+krossbow-websocket-okhttp = { module = "org.hildan.krossbow:krossbow-websocket-okhttp", version.ref = "krossbowStompCore" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
