--- a/pinpad/hub-complete-pinpad-example/gradle/libs.versions.toml
+++ b/pinpad/hub-complete-pinpad-example/gradle/libs.versions.toml
@@ -20,7 +20,8 @@ signalr = "8.0.11"
 preference = "1.2.1"
 
 hubinterface = "2.0.0"
-hubcore = "1.1.0-debug"
+hubscopeprovider = "1.1.1-debug"
+hubsitefprovider = "1.0.2-debug"
 ##Test only
 
 [libraries]
@@ -41,8 +42,10 @@ rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroi
 signalr = { module = "com.microsoft.signalr:signalr", version.ref = "signalr" }
 androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
 
-hubcore = { module = "com.getcard.hub:core-pinpad", version.ref = "hubcore" }
+# Hub
 hubinterface = { module = "com.getcard.hub:hub-interface", version.ref = "hubinterface" }
+hub-scope-provider = { module = "com.getcard.hub.pinpad:scope-provider", version.ref = "hubscopeprovider" }
+hub-sitef-provider = { module = "com.getcard.hub.pinpad:sitef-provider", version.ref = "hubsitefprovider" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
