--- a/pdv-pinpad/hub-pinpad-pdv-example/gradle/libs.versions.toml
+++ b/pdv-pinpad/hub-pinpad-pdv-example/gradle/libs.versions.toml
@@ -19,13 +19,13 @@ rxandroid = "3.0.0"
 signalr = "8.0.11"
 preference = "1.2.1"
 
-hubinterface = "2.0.0"
-hubcore = "1.0.0-debug"
-
 krossbowStompCore = "7.0.0"
+
+hubinterface = "2.0.0"
+hubscopeprovider = "1.1.1-debug"
+hubsitefprovider = "1.0.2-debug"
+
 [libraries]
-
-
 krossbow-stomp-core = { module = "org.hildan.krossbow:krossbow-stomp-core", version.ref = "krossbowStompCore" }
 krossbow-stomp-kxserialization-json = { module = "org.hildan.krossbow:krossbow-stomp-kxserialization-json", version.ref = "krossbowStompCore" }
 krossbow-websocket-okhttp = { module = "org.hildan.krossbow:krossbow-websocket-okhttp", version.ref = "krossbowStompCore" }
@@ -47,8 +47,10 @@ rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroi
 signalr = { module = "com.microsoft.signalr:signalr", version.ref = "signalr" }
 androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
 
-hubcore = { module = "com.getcard.hub:core-pinpad", version.ref = "hubcore" }
+# Hub
 hubinterface = { module = "com.getcard.hub:hub-interface", version.ref = "hubinterface" }
+hub-scope-provider = { module = "com.getcard.hub.pinpad:scope-provider", version.ref = "hubscopeprovider" }
+hub-sitef-provider = { module = "com.getcard.hub.pinpad:sitef-provider", version.ref = "hubsitefprovider" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
