--- a/simple-example/gradle/libs.versions.toml
+++ b/simple-example/gradle/libs.versions.toml
@@ -19,8 +19,8 @@ rxandroid = "3.0.0"
 signalr = "8.0.11"
 preference = "1.2.1"
 
-hubscopeprovider = "1.0.0-debug"
-hubsitefprovider = "1.0.0-debug"
+#hubscopeprovider = "1.1.1-debug"
+hubsitefprovider = "1.2.2-debug"
 ##Test only
 
 [libraries]
@@ -42,8 +42,7 @@ signalr = { module = "com.microsoft.signalr:signalr", version.ref = "signalr" }
 androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
 
 # Hub
-hub-scope-provider = { module = "com.getcard.hub.pinpad:scope-provider", version.ref = "hubscopeprovider" }
-hub-sitef-provider = { module = "com.getcard.hub.pinpad:sitef-provider", version.ref = "hubsitefprovider" }
+hub-sitef-provider = { module = "com.getcard.hub.pos:sitef-provider-gpos760", version.ref = "hubsitefprovider" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
