--- a/hub-complete-pos-example/app/src/main/AndroidManifest.xml
+++ b/hub-complete-pos-example/app/src/main/AndroidManifest.xml
@@ -14,31 +14,26 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".RefundActivity"
             android:exported="false" />
-
         <activity
             android:name=".InitRefundActivity"
             android:exported="false" />
-
         <activity
             android:name=".InitTransactionActivity"
             android:exported="false" />
-
         <activity
             android:name=".SettingsActivity"
-            android:exported="false" />
-
-        <!--        <activity-->
-        <!--            android:name=".ScopeSettingsActivity"-->
-        <!--            android:exported="false" />-->
-
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".ScopeSettingsActivity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".SitefSettingsActivity"
             android:exported="false" />
-
         <activity android:name=".PaymentActivity" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
